--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -4,9 +4,9 @@
     <item android:drawable="@android:color/white" />
 
     <!-- You can insert your own image assets here -->
-<!--     <item>-->
-<!--        <bitmap-->
-<!--            android:gravity="center"-->
-<!--            android:src="@drawable/robot" />-->
-<!--    </item>-->
+     <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/icon_wan_android" />
+    </item>
 </layer-list>
